added 'Quote Received' status

--- a/src/static/create_quote.html
+++ b/src/static/create_quote.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/api/static?filename=create_quote.css">
 </head>
 
-<body data-carrierid="{{carrierID}}" data-jobid="{{jobID}}">
+<body data-carrierid="{{carrierID}}" data-jobid="{{jobID}}" data-potentialid="{{potentialID}}">
     <div class="quote-form">
         <h2 data-carriername="{{carriername}}">Create Quote : {{carriername}}</h2>
         <label for="estimatedAmount">Estimated Amount: (Per Vehicle)</label>
