added potential id param Request Quote option

--- a/src/static/email_form.html
+++ b/src/static/email_form.html
@@ -6,7 +6,7 @@
     <title>Dispatch Form</title>
     <link rel="stylesheet" href="/api/static?filename=email_form.css">
 </head>
-<body data-dealid="{{dealid}}" data-carrierid="{{carrierid}}" data-customerid="{{customerid}}" data-emailtype="{{email_type}}" data-quoteid="{{quoteid}}" data-toname="{{ToName}}" data-invoicedprice="{{invoice_price}}">
+<body data-dealid="{{dealid}}" data-carrierid="{{carrierid}}" data-customerid="{{customerid}}" data-emailtype="{{email_type}}" data-quoteid="{{quoteid}}" data-toname="{{ToName}}" data-invoicedprice="{{invoice_price}}" data-potentialid="{{potentialID}}">
     <h1 id="form-title"></h1>
     <h3>To : {{ToName}}</h3>
     <div class="form-container">
